# invincat

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_CN.md  LICENSE  MEMORY_DESIGN.md  MEMORY_DESIGN_EN.md  README.md  README_CN.md  REFACTOR_REPORT.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
doc/: ARCHITECTURE.md  ARCHITECTURE_CN.md  ARCHITECTURE_EN.md  CODE_REVIEW_AUDIT.md  MEMORY_DESIGN.md  MEMORY_DESIGN_EN.md  README.md  README_CN.md  TECHNICAL_BLOG_CN.md  TECHNICAL_BLOG_EN.md
invincat_cli/: __init__.py  __main__.py  _cli_context.py  _debug.py  _server_config.py  agent.py  app.py  app.tcss  app_agent_runtime.py  app_approval_runtime.py  app_memory_runtime.py  app_model_args.py  app_model_command.py  app_model_runtime.py  app_plan_runtime.py  app_queueing.py  app_scheduler_runtime.py  app_services.py  app_shell.py  app_startup_runtime.py  app_state.py  app_theme_prefs.py  app_thread_history.py  app_version.py  approve_plan.py  ask_user.py  auto_memory.py  command_registry.py  config.py  deepseek_chat_openai.py  display_glyphs.py  file_ops.py  hooks.py  i18n.py  input.py  local_context.py  main.py  mcp_tools.py  mcp_trust.py  memory_agent.py  (+24 more)
invincat_cli/agent/: __init__.py  catalog.py  middleware.py  prompt.py  subagents.py  system_prompt.md  tool_descriptions.py
invincat_cli/app/: __init__.py  app.tcss
invincat_cli/app_runtime/: __init__.py  action_handlers.py  agent.py  agent_handlers.py  approval.py  approval_handlers.py  approval_plan_mixins.py  bindings.py  command.py  command_handlers.py  command_mixins.py  deferred_handlers.py  delegate_mixins.py  errors.py  exit_handlers.py  goal_handlers.py  help.py  initialization.py  input_handlers.py  interaction_mixins.py  layout.py  memory.py  memory_handlers.py  message_flow.py  model_command.py  model_handlers.py  model_runtime.py  plan.py  plan_handlers.py  queue_handlers.py  queueing.py  reload.py  runner.py  schedule_handlers.py  scheduled_delivery.py  scheduler.py  server.py  server_events.py  server_handlers.py  services.py  (+21 more)
invincat_cli/built_in_skills/: __init__.py  dependency_check.py
invincat_cli/cli/: __init__.py  acp.py  args.py  dependencies.py  mcp.py  runtime.py  stdin.py  textual.py
invincat_cli/commands/: __init__.py  registry.py
invincat_cli/config/: __init__.py  bootstrap.py  display.py  langsmith.py  model_factory.py  paths.py  runtime.py  session.py  settings_model.py
invincat_cli/configurable_model/: __init__.py
invincat_cli/core/: __init__.py  cli_context.py  debug.py  session_stats.py  version.py
invincat_cli/goal_mode/: __init__.py  commands.py  models.py  prompts.py  store.py
invincat_cli/i18n/: __init__.py  translations.py
invincat_cli/integrations/: __init__.py  sandbox_agentcore.py  sandbox_cloud_providers.py  sandbox_factory.py  sandbox_factory_lifecycle.py  sandbox_langsmith.py  sandbox_provider.py
invincat_cli/io/: __init__.py  clipboard.py  file_mentions.py  file_op_approval.py  file_op_content.py  file_op_diff.py  file_op_models.py  file_op_paths.py  file_op_tracker.py  file_ops.py  input.py  media_tracker.py  pasted_paths.py
invincat_cli/langsmith_links/: __init__.py
invincat_cli/local_context/: __init__.py  mcp.py  script.py
invincat_cli/main/: __init__.py  __main__.py
invincat_cli/mcp/: config_loader.py  loader.py  models.py  tools.py
invincat_cli/memory/: __init__.py  agent.py  agent_extraction.py  agent_runtime.py  agent_store.py  prompts.py  signals.py  store_core.py  store_mutations.py  store_ops.py  store_validation.py
invincat_cli/middleware/: __init__.py  ask_user.py  auto_memory.py  file_management.py  micro_compact.py  plan_agent.py  summarization_event.py
invincat_cli/model_config/: __init__.py  persistence.py  profiles.py  thread_preferences.py  types.py
invincat_cli/models/: __init__.py  deepseek_chat_openai.py  testing.py
invincat_cli/non_interactive/: __init__.py  state.py  stream.py
invincat_cli/offload/: __init__.py
invincat_cli/plan_mode/: __init__.py  handoff.py  models.py  policy.py  prompts.py  runtime.py
invincat_cli/presentation/: __init__.py  help.py  tool_display.py
invincat_cli/project_utils/: __init__.py
invincat_cli/remote/: __init__.py  client.py  helpers.py  messages.py
invincat_cli/scheduler/: __init__.py  delivery.py  display.py  models.py  parser.py  payloads.py  runner.py  schema.py  store.py  store_db.py  store_run_ops.py  store_serialization.py  store_views.py  tool.py  tool_constants.py  tool_factories.py  tool_validation.py  wecom_delivery.py
invincat_cli/server/: __init__.py  app_config.py  app_env.py  app_health.py  app_network.py  app_server.py  config.py  graph.py  manager.py
invincat_cli/sessions/: __init__.py  cache.py  checkpoints.py  commands.py  format.py  queries.py
invincat_cli/shell_security/: __init__.py
invincat_cli/skills/: __init__.py  commands.py  commands_create.py  commands_delete.py  commands_info.py  commands_list.py  load.py
invincat_cli/textual_adapter/: __init__.py  execution.py  input.py  interrupt_flow.py  message_stream.py  reporting.py  subagent_activity.py  tool_calls.py  tool_results.py  turn_cleanup.py  ui_adapter.py  update_stream.py  utils.py  validation.py
invincat_cli/theme/: __init__.py  colors.py  registry.py
invincat_cli/thread_config/: __init__.py
invincat_cli/unicode_security/: __init__.py  args.py  dangerous.py  models.py  url.py
invincat_cli/update_check/: __init__.py
invincat_cli/wecom/: __init__.py  bridge.py  daemon.py  daemon_config.py  daemon_constants.py  daemon_control.py  daemon_process.py  daemon_runtime.py  daemon_scheduler.py  daemon_state.py  file.py  headless.py  headless_schedule.py  headless_stream.py  media.py  protocol.py  session.py  turn.py
invincat_cli/widgets/: __init__.py  _links.py  approval.py  approve.py  ask_user.py  assistant_message.py  auto_memory_config.py  autocomplete.py  autocomplete_file_utils.py  autocomplete_files.py  autocomplete_shell.py  autocomplete_shell_utils.py  autocomplete_slash.py  chat_completion.py  chat_input.py  chat_input_completion.py  diff.py  (+42 more)
tests/: __init__.py  conftest.py
(+171 files in other folders)
