[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "invincat-cli"
version = "0.0.34"
description = "Terminal interface for Deep Agents - interactive AI agent with file operations, shell access, and sub-agent capabilities."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
authors = [
    { name = "dog-qiuqiu", email = "dogqiuqiu@outlook.com" },
]
maintainers = [
    { name = "dog-qiuqiu", email = "dogqiuqiu@outlook.com" },
]
keywords = ["agents", "ai", "cli", "terminal", "llm", "langgraph", "langchain", "deep-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Terminals",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    # Framework
    "deepagents==0.4.11",
    "langchain>=1.2.13,<2.0.0",
    "langgraph>=1.1.2,<2.0.0",
    "langgraph-checkpoint-sqlite>=3.0.0,<4.0.0",

    # Client-server architecture
    "langgraph-sdk>=0.3.11,<1.0.0",
    "langgraph-cli[inmem]>=0.4.15,<1.0.0",
    "httpx>=0.28.1,<1.0.0",

    # Core model providers
    "langchain-anthropic>=1.4.0,<2.0.0",
    "langchain-google-genai>=4.2.1,<5.0.0",
    "langchain-openai>=1.1.8,<2.0.0",

    # UI/Terminal
    "textual>=8.0.0,<9.0.0",
    "textual-autocomplete>=3.0.0,<5.0.0",
    "prompt-toolkit>=3.0.52,<4.0.0",
    "rich>=14.0.0,<15.0.0",

    # Tools and utilities
    "tavily-python>=0.7.21,<1.0.0",
    "pyperclip>=1.11.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "requests>=2.0.0,<3.0.0",
    "pillow>=10.0.0,<13.0.0",
    "pyyaml>=6.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "tomli-w>=1.0.0,<2.0.0",

    # MCP and ACP
    "langchain-mcp-adapters>=0.2.0,<1.0.0",
    "deepagents-acp>=0.0.4",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "ruff>=0.9.0,<1.0.0",
]

dev = [
    "invincat-cli[test]",
    "black>=24.0.0,<25.0.0",
    "mypy>=1.10.0,<2.0.0",
    "pre-commit>=3.7.0,<4.0.0",
]

[project.scripts]
invincat-cli = "invincat_cli:cli_main"

[project.urls]
Homepage = "https://github.com/dog-qiuqiu/invincat"
Documentation = "https://github.com/dog-qiuqiu/invincat#readme"
Repository = "https://github.com/dog-qiuqiu/invincat"
Issues = "https://github.com/dog-qiuqiu/invincat/issues"
Changelog = "https://github.com/dog-qiuqiu/invincat/releases"

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused import

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
